2004-08-19  A Balamurugan  <bala.a@californiadigital.com>

	* fish/src/ipmi-wrapper-sensor.c: modified
	display_current_threshold_sensor_full_record() and
	display_verbose_current_threshold_sensor_full_record().

2004-08-18  Ian Zimmerman  <itz@californiadigital.com>

	* libfreeipmi/src/pcilocate.c (pci_get_dev_info): 
	Fix a typo causing warning in the stubbed out branch.

	* fish/extensions/sel.scm (sel-main):
	Add call to fi-sel-get-info.

	* fish/src/extension.c (install_new_procedures):
	Register fi-sel-get-info.

	* fish/src/scm-procedures.h (ex_sel_get_info):
	Declare new function.
	
	* fish/src/scm-procedures.c (ex_sel_get_info): 
	Add function.

	* fish/src/ipmi-wrapper-sel.c (get_sel_info): 
	Add function.

	* fish/src/ipmi-wrapper-sel.h (struct sel_info):
	Add this structure and enum for the flags field.
	(get_sel_info): declare new function.
	
2004-08-18  A Balamurugan  <bala.a@californiadigital.com>

	* TODO: added new todo's.
	* fish/src/ipmi-wrapper-sensor.c: now sensor status are relavent
	to threshold state.
	* libfreeipmi/src/ipmi-sensor-cmds.c: added
	ipmi_kcs_get_sensor_thresholds().
	* libfreeipmi/src/ipmi-sensor-types.c: updated
	ipmi_sensor_threshold_health_check().

2004-08-17  Ian Zimmerman  <itz@californiadigital.com>

	* fish/extensions/sel.scm (sel-display-help): add --hex-dump
	option to usage messages.
	(sel-main): actually implement --hex-dump

	* fish/src/extension.c (install_new_procedures): 
	install ex_sel_*_{raw,hex}.

	* fish/src/scm-procedures.h: declare ex_sel_*_hex.

	* fish/src/scm-procedures.c (ex_sel_get_first_entry_hex): 
	new function.
	(ex_sel_get_next_entry_hex): new function.

2004-08-16  Ian Zimmerman  <itz@californiadigital.com>

	* fish/src/scm-procedures.c (ex_sel_get_next_entry_raw):
	Fix index out of bounds.

	* fish/src/scm-procedures.h: add prototypes for
	ex_sel_get_next_entry_raw and ex_sel_get_first_entry_raw.

	* fish/src/scm-procedures.c (ex_sel_get_next_entry_raw):
	new function.